<?php

abstract class Action
{
  abstract function run($database);
}
