<?php

final class DocumentNotFound extends Exception {}
