<?php

final class InvalidDocument extends Exception {}
