<?php

final class InvalidRequest extends Exception {}
